syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kirara/pb/nodes;nodes";

import "device_message.proto";
import "generic_message.proto";

message DeviceLoginRequest {
    string id = 1;
    string access = 2;
    string secret = 3;
}

message DeviceLoginReply {
    string id = 1;
    string token = 2;
}

message DeviceLinkRequest {
    // string id = 1;
    sint32 status = 2;
}

service DeviceService {
    rpc Login(DeviceLoginRequest) returns (DeviceLoginReply) {}
    rpc Update(pb.Device) returns (pb.Device) {}
    rpc View(pb.MyEmpty) returns (pb.Device) {}
    rpc Link(DeviceLinkRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.MyEmpty) returns (pb.Device) {}
    rpc Sync(pb.Device) returns (pb.MyBool) {}
}
